# ccode

./: CLAUDE_CODE_API.md  CLAUDE_CODE_STRUCTURE.md  Cargo.toml  LIBRARY_SECTIONS.md  README.md  log_patch.js
app_modules_ast/_unidentified/: $12.js  $19.js  $1Q.js  $22.js  $30.js  $69.js  $79.js  $92.js  $9Q.js  $D9.js  $E1.js  $E9.js  $F0.js  $FB.js  $K9.js  $KB.js  $L0.js  $M0.js  $M2.js  $N0.js  $NA.js  $P.js  $T0.js  $V0.js  $W0.js  $X9.js  $XB.js  $Z0.js  $bA.js  $bB.js  $c1.js  $e.js  $e1.js  $e2.js  $f.js  $g1.js  $gQ.js  $h.js  $j0.js  $k2.js  (+1961 more)
app_modules_ast/agents/: background.js  communication.js  spawn.js  tasks.js
app_modules_ast/api/: client_config.js  message_creation.js  messages.js  query.js  response.js
app_modules_ast/auth/: oauth_config.js  tokens.js
app_modules_ast/commands/: execution.js  help.js  registry.js
app_modules_ast/config/: claude_md.js  loader.js  project.js  settings.js
app_modules_ast/cost/: calculator.js  usage.js
app_modules_ast/git/: commands.js  commit.js  diff.js
app_modules_ast/hooks/: execution.js  post_tool.js  pre_tool.js  registry.js
app_modules_ast/mcp/: cli.js  client.js  server_manager.js
app_modules_ast/permissions/: mode.js  prompt.js  rules.js  sandbox.js
app_modules_ast/streaming/: content.js  events.js
app_modules_ast/tools/: bash.js  edit.js  execution.js  glob.js  grep.js  read.js  registry.js  write.js
app_modules_ast/ui/: layout.js  terminal.js  text.js
reconstructed/api/: client.ts  index.ts  models.ts  types.ts
reconstructed/auth/: README.md  api-helpers.ts  auth-code-listener.ts  config.ts  helpers.ts  index.ts  oauth-client.ts  pkce.ts  token-store.ts  types.ts
scripts/: api_client.js  api_client_sdk.js  apply_fetch_patch.sh  create_api_key.js  extract_original_names.js  fetch_lib_signatures.js  fetch_logger_patch.js  oauth_login.js  oauth_login_simple.js  query_claude.js  warmup_haiku.js
src/: lib.rs  main.rs
src/cli/: compare.rs  explore.rs  export.rs  extract.rs  mod.rs  transpose.rs
src/compare/: diff.rs  mod.rs  report.rs
src/identify/: claude.rs  identifier.rs  mod.rs
src/parser/: extractor.rs  mod.rs  visitor.rs  webpack.rs
src/store/: db.rs  mod.rs  models.rs  queries.rs
src/transpose/: heuristics.rs  mapper.rs  mod.rs  scorer.rs
